header color and spacing fix

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,100 +1,78 @@
-// #mainNav {
-//   min-height: 56px;
-//   background-color: #fff;
-//
-// }
-//
-// #mainNav .navbar-toggler {
-//   font-size: 100%;
-//   padding: 5rem;
-//   color: #64a19d;
-//   border: 1px solid #64a19d;
-// }
-//
-// #mainNav .navbar-toggler:focus {
-//   outline: none;
-// }
-//
-// #mainNav .navbar-brand {
-//   color: #161616;
-//   font-weight: 700;
-//   padding: .9rem 0;
-// }
-//
-// #mainNav .navbar-nav .nav-item:hover {
-//   color:#000000;
-//   outline: none;
-//   background-color: transparent;
-// }
-//
-// #mainNav .navbar-nav .nav-item:active, #mainNav .navbar-nav .nav-item:focus {
-//   outline: none;
-//   background-color: transparent;
-//   position: relative;
-//
-// }
-//
-// @media (min-width: 992px) {
-//   #mainNav {
-//     padding-top: 0;
-//     padding-bottom: 0;
-//     border-bottom: none;
-//     // background-color: #232323;
-//     background-color: transparent;
-//     -webkit-transition: background-color 0.3s ease-in-out;
-//     transition: background-color 0.3s ease-in-out;
-//   }
-//   #mainNav .navbar-brand {
-//     padding: .5rem 0;
-//     color: rgba(20, 20, 20, 0.5);
-//   }
-//   #mainNav .nav-link {
-//     -webkit-transition: none;
-//     transition: none;
-//     padding: 2rem 1.5rem;
-//     color: rgba(20, 20, 20, 0.5);
-//   }
-//   #mainNav .nav-link:hover {
-//     color: rgba(20, 20, 20, 0.75);
-//   }
-//   #mainNav .nav-link:active {
-//     color: white;
-//   }
-//   #mainNav.navbar-shrink {
-//     background-color: #fff;
-//   }
-//   #mainNav.navbar-shrink .navbar-brand {
-//     color: #161616;
-//   }
-//   #mainNav.navbar-shrink .nav-link {
-//     color: #161616;
-//     padding: 1.5rem 1.5rem 1.25rem;
-//     border-bottom: 0.25rem solid transparent;
-//   }
-//   #mainNav.navbar-shrink .nav-link:hover {
-//     color: #64a19d;
-//   }
-//   #mainNav.navbar-shrink .nav-link:active {
-//     color: #467370;
-//   }
-//   #mainNav.navbar-shrink .nav-link.active {
-//     color: #64a19d;
-//     outline: none;
-//     border-bottom: 0.25rem solid #64a19d;
-//   }
-// }
-//
-//
-//
-//
-//
-//
-//
-//
-//
-// .fixed-top {
-//   position: fixed;
-//   position: relative;
-//
-//
-// }
+#mainNav {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  font-weight: 700;
+  font-family: 'Montserrat';
+}
+
+#mainNav .navbar-brand {
+  color: #fff;
+}
+
+#mainNav .navbar-nav {
+  margin-top: 1rem;
+  letter-spacing: 0.0625rem;
+}
+
+#mainNav .navbar-nav li.nav-item a.nav-link {
+  color: #fff;
+}
+
+#mainNav .navbar-nav li.nav-item a.nav-link:hover {
+  color: #666600;
+}
+
+#mainNav .navbar-nav li.nav-item a.nav-link:active, #mainNav .navbar-nav li.nav-item a.nav-link:focus {
+  color: #fff;
+}
+
+#mainNav .navbar-nav li.nav-item a.nav-link.active {
+  color: #666600;
+  background-color: #ffffff;
+}
+
+#mainNav .navbar-toggler {
+  font-size: 80%;
+  padding: 0.8rem;
+
+}
+
+@media (min-width: 992px) {
+  #mainNav {
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+    -webkit-transition: padding-top 0.3s, padding-bottom 0.3s;
+    transition: padding-top 0.3s, padding-bottom 0.3s;
+  }
+  #mainNav .navbar-brand {
+    font-size: 2em;
+    -webkit-transition: font-size 0.3s;
+    transition: font-size 0.3s;
+  }
+  #mainNav .navbar-nav {
+    margin-top: 0;
+  }
+  #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
+    color: #fff;
+    background: #666600;
+  }
+  #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
+    color: #fff;
+    background: #666600;
+  }
+  #mainNav.navbar-shrink {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+  #mainNav.navbar-shrink .navbar-brand {
+    font-size: 1.5em;
+  }
+}
+
+.bg-primary {
+  background-color: #18BC9C !important;
+}
+
+.bg-secondary {
+  background-color: #D7DED2 !important;
+}
